nav bar elements align is fixed

--- a/resources/css/admin_query.css
+++ b/resources/css/admin_query.css
@@ -4,3 +4,10 @@
         display: none;
     }
 }
+
+/* Big tablets : from 1200 to device-width */
+@media only screen and (max-width: 1200px){
+    .mobile-nav-icon{
+        display: none;
+    }
+}
